# BET-64

./: .travis.yml  LICENSE.md  Makefile  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
BET64/: BET64.py  __init__.py  __main__.py  check_b64.py  decode_b64.py  encode_b64.py  type_b64.py
docs/: conf.py
tests/: __init__.py  context.py  test_basic.py  test_usage.py
