[metadata]
name = BET64
version = 1.0.0
author = Mr. Walls
author-email = reactive-firewall@users.noreply.github.com
summary = BET-64 Encapsulation Tools
description = file: README.md
home-page = https://github.com/reactive-firewall/BET-64
download-url = https://github.com/reactive-firewall/BET-64.git
license = file: LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 2.7

[bdist_wheel]
universal=1

[files]
packages = BET64

[options]
packages = find:

[options.packages.find]
exclude =
    docs
    tests
